# 5-domain-final

./: .gitignore  skills-lock.json
Call-ASR/: README.md  plan.md  pyproject.toml  spec.md
Call-ASR/notebooks/: colab_submission.ipynb  colab_submission.py
Call-ASR/outputs/: predictions_typhoon-ai__typhoon-whisper-large-v3_single_space_complete.csv  predictions_typhoon-ai__typhoon-whisper-large-v3_single_space_unfinished_2.csv  submission_typhoon-ai__typhoon-whisper-large-v3_single_space.csv  submission_typhoon-ai__typhoon-whisper-large-v3_single_space_unfinished_2.csv  unfinished_predictions_typhoon-ai__typhoon-whisper-large-v3_single_space(3).csv
Call-ASR/scripts/: fill_missing_predictions.py
Call-ASR/src/call_asr/: audio.py  audit_audio.py  ensemble.py  infer.py  normalize_text.py  paths.py  proxy_data.py  score_proxy.py  submission.py
Call-ASR/tests/: conftest.py  test_audio.py  test_audit_audio.py  test_colab_notebook_contract.py  test_ensemble.py  test_infer_resume.py  test_normalize_text.py  test_paths.py  test_project_scaffold.py  test_proxy_data.py  test_readme_contract.py  test_score_proxy.py  test_submission.py
Chest-Disease/: 2026-06-06-chest-disease-colab-a100-solution.md  pyproject.toml  spec.md  submission_log.md
Chest-Disease/notebooks/: chest_disease_colab_a100_solution.ipynb  no_finding_quick_submission.ipynb
Chest-Disease/scripts/: build_colab_notebook.py
Chest-Disease/tests/: test_config_kaggle_io.py  test_data_submission.py  test_dataset_models.py  test_folds_metrics.py  test_pipeline_smoke.py
Math-VQA/: 2026-06-06-thai-math-vqa-kaggle-pipeline.md  README.md  findings.md  pyproject.toml  research-log.md  research-state.yaml  spec.md  submission-vq.csv
Math-VQA/literature/: paddleocr-vl.md  qlora.md  qwen2_5-vl.md  qwen3-vl.md  survey.md
Math-VQA/notebooks/: thai_math_vqa_h100_qwen_vl.ipynb  thai_math_vqa_ollama_llava.ipynb
Math-VQA/outputs/: experiment_log-1.csv  raw_predictions-1.csv  submission-1.csv
Math-VQA/scripts/: build_h100_qwen_notebook.py  build_notebook.py
Math-VQA/tests/: test_data_contracts.py  test_evaluation.py  test_notebook_build.py  test_postprocess.py  test_preprocessing.py  test_prompts_and_ollama.py  test_submission.py
Math-VQA/to_human/: h100_vlm_research_2026-06-06.html  h100_vlm_research_2026-06-06.md
Sleep-Stage/: findings.md  plan.md  pyproject.toml  research-log.md  research-state.yaml  sleep_stage_solution.ipynb  spec.md  submission_log.md
Sleep-Stage/literature/: brach-2026-mamba-wearable.md  carter-2024-wav2sleep.md  gillard-2024-wearable-cnn.md  nam-2024-insightsleepnet.md  radha-2021-ppg-transfer.md  survey.md  zhang-2017-wearable-rnn.md
Sleep-Stage/tests/: test_data.py  test_deep.py  test_features_context.py  test_models_smoothing.py
Sleep-Stage/to_human/: h100_sleep_stage_research_2026-06-06.html  h100_sleep_stage_research_2026-06-06.md
(+47 files in other folders)
