[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chest-disease"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pillow>=9.0",
  "scikit-learn>=1.2",
  "torch>=2.0",
  "torchvision>=0.15",
  "timm>=0.9",
  "iterative-stratification>=0.1.7",
  "nbformat>=5.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
