[project]
name = "math-vqa"
version = "0.1.0"
description = "Kaggle-ready Thai Math VQA inference pipeline"
requires-python = ">=3.10"
dependencies = [
  "nbformat>=5.9",
  "pandas>=2.0",
  "pillow>=10.0",
  "requests>=2.31",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
