[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep-stage"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "scipy>=1.9",
]

[project.optional-dependencies]
h100 = [
  "torch>=2.3",
]
boosting = [
  "catboost>=1.2",
  "lightgbm>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
